--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitcore",
   "version": "0.9.0",
-  "description": "A pure and powerful JavaScript Bitcoin library.",
+  "description": "A pure and powerful JavaScript FairCoin library.",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
   "scripts": {
@@ -66,7 +66,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcore.git"
+    "url": "https://github.com/FairCoinTeam/faircore.git"
   },
   "browser": {
     "request": "browser-request"
